fixed blobs overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,37 +14,34 @@ body {
             transparent,
             rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
     background: #191A21;
+    /* overflow-x: hidden; */
+}
+
+body,
+html {
     overflow-x: hidden;
 }
 
+/*
 ::-webkit-scrollbar {
     width: 7px;
-    /* adjust the width as needed */
     border-radius: 999px;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: linear-gradient(to bottom, #ff6b6b9d, #ff43538f);
     transition-duration: 0.2s;
     border-radius: 999px;
-    /* color of the scrollbar handle */
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background-color: #fd5252;
-    /* color of the scrollbar handle on hover */
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
     background: #00000000;
-    /* color of the scrollbar track */
 }
 
-/* Track on hover */
 ::-webkit-scrollbar-track:hover {
     background: #cccccc00;
-    /* color of the scrollbar track on hover */
-}
+} */
